Paint the screens MainFrame has been describing
PROTOCOL.md specified a display MainFrame could borrow and StdioEditor spoke it
down a pipe, but nothing on a screen had ever rendered one. The console does now:
`dev.mainframe.gui.console.Panel` is a conforming editor, so a form in that window
goes up with every field on view and a destructive command asks for its yes on a
screen instead of refusing to ask at all.

It is built out of rows of text rather than widgets. A character grid made of
widgets has to know how wide a character is and the framework does not owe anybody
that; a row of a monospaced face is one string, so its cells line up by
construction and colour is a span over it rather than a node of its own -- two
dozen nodes for a whole screen. The thing that looks like the cost of that
arrangement, knowing which cell was clicked, the framework already pays for: a
laid-out text node publishes the x of every character boundary, so a click
resolves to a column by lookup and lands the caret on the character clicked.

And it reads the wire form. `show` is handed a Screen and immediately asks it for
the message, then works from the record, because an editor is on the far side of a
protocol and one that reads a private API is one the protocol was never tested
against. That is what turned the specification into something with an opinion, and
three of the things it said were wrong.

An editor must claim less than it can render. This one can paint a `choice` and
cannot paint one well, a dropdown being a thing that opens and a tube having
nowhere to open it into -- so it leaves the capability unclaimed, MainFrame writes
the options above the field as text and sends a plain entry, and the result is both
readable and what a 5250 actually did. Rule four earning its keep by being used.

Interactive and somebody-to-ask are different questions. Interactive means the
process's own stdio belongs to a person, which in a window would send an external
program's output somewhere no